--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,11 +6,26 @@ on:
       - main
       - develop
       - 'feature/**'
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'LICENSE'
+      - '.gitignore'
   pull_request:
     branches:
       - main
       - develop
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'LICENSE'
+      - '.gitignore'
   workflow_dispatch:
+
+# Cancel in-progress runs when a new run is triggered
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   DOTNET_VERSION: '10.0.x'
@@ -37,15 +52,12 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ./clywell-logging
 
       - name: Build solution
         run: dotnet build --configuration ${{ env.BUILD_CONFIGURATION }} --no-restore
-        working-directory: ./clywell-logging
 
       - name: Run unit tests
         run: dotnet test --configuration ${{ env.BUILD_CONFIGURATION }} --no-build --logger "trx;LogFileName=test-results.trx" --collect:"XPlat Code Coverage"
-        working-directory: ./clywell-logging
 
       - name: Upload test results
         if: always()
@@ -65,7 +77,6 @@ jobs:
         run: |
           echo "Code coverage metrics:"
           find . -name "coverage.cobertura.xml" -exec echo "Found: {}" \;
-        working-directory: ./clywell-logging
 
   # ============================================================
   # Code Quality Checks
@@ -87,16 +98,13 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ./clywell-logging
 
       - name: Run analyzers
         run: dotnet build --configuration ${{ env.BUILD_CONFIGURATION }} --no-restore /p:TreatWarningsAsErrors=true
-        working-directory: ./clywell-logging
         continue-on-error: true
 
       - name: Check formatting
         run: dotnet format --verify-no-changes --verbosity diagnostic
-        working-directory: ./clywell-logging
         continue-on-error: true
 
   # ============================================================
@@ -105,7 +113,8 @@ jobs:
   benchmarks:
     runs-on: ubuntu-latest
     name: Performance Benchmarks
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # Skip benchmarks for Dependabot PRs and only run on main branch pushes from real commits
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
     steps:
       - name: Checkout code
@@ -118,27 +127,25 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ./clywell-logging
 
       - name: Build benchmark runner
         run: dotnet build --configuration Release tests/Clywell.Core.Logging.BenchmarkRunner/Clywell.Core.Logging.BenchmarkRunner.csproj --no-restore
-        working-directory: ./clywell-logging
 
       - name: Run benchmarks (LogMessages)
         run: dotnet run -c Release -- --filter "*LogMessagesBenchmarks*" --exporters json
-        working-directory: ./clywell-logging/tests/Clywell.Core.Logging.BenchmarkRunner
+        working-directory: tests/Clywell.Core.Logging.BenchmarkRunner
         timeout-minutes: 30
         continue-on-error: true
 
       - name: Run benchmarks (LoggerScopes)
         run: dotnet run -c Release -- --filter "*LoggerScopeExtensionsBenchmarks*" --exporters json
-        working-directory: ./clywell-logging/tests/Clywell.Core.Logging.BenchmarkRunner
+        working-directory: tests/Clywell.Core.Logging.BenchmarkRunner
         timeout-minutes: 30
         continue-on-error: true
 
       - name: Run benchmarks (SensitiveDataRedaction)
         run: dotnet run -c Release -- --filter "*SensitiveDataRedactionBenchmarks*" --exporters json
-        working-directory: ./clywell-logging/tests/Clywell.Core.Logging.BenchmarkRunner
+        working-directory: tests/Clywell.Core.Logging.BenchmarkRunner
         timeout-minutes: 30
         continue-on-error: true
 
@@ -158,7 +165,7 @@ jobs:
             const path = require('path');
             
             // Find benchmark results
-            const resultsDir = './clywell-logging/tests/Clywell.Core.Logging.BenchmarkRunner/BenchmarkDotNet.Artifacts/results';
+            const resultsDir = './tests/Clywell.Core.Logging.BenchmarkRunner/BenchmarkDotNet.Artifacts/results';
             if (fs.existsSync(resultsDir)) {
               const files = fs.readdirSync(resultsDir);
               const jsonFile = files.find(f => f.endsWith('.json'));
@@ -186,6 +193,8 @@ jobs:
   documentation:
     runs-on: ubuntu-latest
     name: Documentation Check
+    # Skip for Dependabot - they don't modify docs
+    if: github.actor != 'dependabot[bot]'
     
     steps:
       - name: Checkout code
@@ -194,10 +203,10 @@ jobs:
       - name: Check README files
         run: |
           echo "Checking documentation files..."
-          test -f ./clywell-logging/README.md && echo "✓ Main README found" || echo "✗ Main README missing"
-          test -f ./clywell-logging/docs/INDEX.md && echo "✓ Documentation index found" || echo "✗ Documentation index missing"
-          test -f ./clywell-logging/tests/Clywell.Core.Logging.Tests/Benchmarks/README.md && echo "✓ Benchmark README found" || echo "✗ Benchmark README missing"
-          test -f ./clywell-logging/tests/Clywell.Core.Logging.BenchmarkRunner/README.md && echo "✓ Benchmark runner README found" || echo "✗ Benchmark runner README missing"
+          test -f README.md && echo "✓ Main README found" || echo "✗ Main README missing"
+          test -f docs/INDEX.md && echo "✓ Documentation index found" || echo "✗ Documentation index missing"
+          test -f tests/Clywell.Core.Logging.Tests/Benchmarks/README.md && echo "✓ Benchmark README found" || echo "✗ Benchmark README missing"
+          test -f tests/Clywell.Core.Logging.BenchmarkRunner/README.md && echo "✓ Benchmark runner README found" || echo "✗ Benchmark runner README missing"
 
   # ============================================================
   # Publish Results
